task: change to score protobuf
